# iiwa_examples

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: contact_problem.cfg  contact_solution_path.txt  contact_solution_path_.txt  contact_solution_path_app.txt  contact_solution_path_app2.txt  contact_solution_path_app3.txt  contact_solution_path_save.txt  contact_solution_path_save_.txt
input/: Bear_Coordinates.txt  Bear_Coordinates2.txt  DataConversion.cpp  Shape_Coordinates.txt  Square_Coordinates.txt  Square_Coordinates2.txt
input/heart/: heart_c_par_fixed.txt  heart_c_par_fixed2.txt  heart_c_parameterized_10.txt  heart_c_parameterized_20.txt  heart_c_short.txt  heart_path_c.txt  heart_path_c_short.txt  heart_path_k.txt  heart_path_m.txt  heart_path_y.txt
launch/: drawing_rviz.launch  iiwa_contact_moveit.launch  iiwa_drawing_moveit.launch  iiwa_drawing_spline.launch  iiwa_move_spline.launch  iiwa_updown_moveit.launch  moveit_planning_drawing.launch  moveit_planning_example.launch  ompl_planning_example.launch  ri_drawing.launch  updown.launch
script/: plan_the_motion.py  spawn_model.py  touch_the_floor_main.py
script/models/: simple_box.urdf  simple_cylinder.urdf
src/: DrawingPlane.cpp  DynamicLines.cpp  Line_rviz.cpp  Line_rviz_org.cpp  contact_iiwa.cpp  contact_moveit.cpp  drawing.rviz  drawing_iiwa.cpp  drawing_iiwa_.cpp  drawing_moveit.cpp  init_pose.cpp  move_spline_demo.cpp  ompl_planning.cpp  plan_motion.cpp  plan_the_motion.cpp  plot_drawing.py  trial1.cpp  updown.cpp  updown_moveit.cpp
tsp/: anne.txt  anne_stipple.npy  image_to_point_tsp.py  points_to_line.py  points_to_picture.py  to_rgb.py
