<package>
  <name>iiwa_examples</name>
  <version>0.0.0</version>
  <description>The iiwa_examples package</description>
  <author email="daeun7250@gmail.com">Daeun Song</author>
  <maintainer email="daeun7250@gmail.com">Daeun Song</maintainer>

  <license>BSD</license>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  
  <build_depend>iiwa_ros</build_depend>
  <run_depend>iiwa_ros</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
